DuPont DevSB/src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Campaign_Details_rtf__c</fullName>
        <inlineHelpText>Additional information and pictures describing this Campaign in more details (Rich Text)</inlineHelpText>
        <label>Campaign Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <description>Main Communication channel used during the execution of this campaign</description>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>eMail</fullName>
                </value>
                <value>
                    <fullName>email-Video</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Face to Face</fullName>
                </value>
                <value>
                    <fullName>Multiple</fullName>
                </value>
                <value>
                    <fullName>Paper mail</fullName>
                </value>
                <value>
                    <fullName>Paper Mail-Literature</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Press-Advertisement</fullName>
                </value>
                <value>
                    <fullName>Seminar</fullName>
                </value>
                <value>
                    <fullName>Trade Show</fullName>
                </value>
                <value>
                    <fullName>Web-Advertising</fullName>
                </value>
                <value>
                    <fullName>Web-Content Sharing</fullName>
                </value>
                <value>
                    <fullName>Web-Other</fullName>
                </value>
                <value>
                    <fullName>Web-Social Media</fullName>
                </value>
                <value>
                    <fullName>Webinar</fullName>
                </value>
                <value>
                    <fullName>Webmeeting</fullName>
                </value>
                <value>
                    <fullName>Website</fullName>
                </value>
                <value>
                    <fullName>Website-Global</fullName>
                </value>
                <value>
                    <fullName>Website-Local</fullName>
                </value>
                <value>
                    <fullName>With Distributor</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExternalBusinessName__c</fullName>
        <description>Public facing name of the Business</description>
        <inlineHelpText>Public facing name of the Business</inlineHelpText>
        <label>External Business Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DuPont</fullName>
                </value>
                <value>
                    <fullName>DuPont Building Innovations</fullName>
                </value>
                <value>
                    <fullName>DuPont Corian®</fullName>
                </value>
                <value>
                    <fullName>DuPont Corian®, Zodiaq®, and Montelli®</fullName>
                </value>
                <value>
                    <fullName>DuPont Corian® and Montelli®</fullName>
                </value>
                <value>
                    <fullName>DuPont Corian® and Tyvek®</fullName>
                </value>
                <value>
                    <fullName>DuPont Corian® and Zodiaq®</fullName>
                </value>
                <value>
                    <fullName>DuPont Mexico</fullName>
                </value>
                <value>
                    <fullName>DuPont Personal Protection</fullName>
                </value>
                <value>
                    <fullName>DuPont Protection Technologies</fullName>
                </value>
                <value>
                    <fullName>DuPont Typar®</fullName>
                </value>
                <value>
                    <fullName>DuPont Tyvek</fullName>
                </value>
                <value>
                    <fullName>DuPont Tyvek®</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Geography__c</fullName>
        <description>Geographical area targeted by this Campaign</description>
        <inlineHelpText>Geographical area targeted by this Campaign</inlineHelpText>
        <label>Geography</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AP</fullName>
                </value>
                <value>
                    <fullName>AP-ANZ</fullName>
                </value>
                <value>
                    <fullName>AP-ASEAN</fullName>
                </value>
                <value>
                    <fullName>APEJ</fullName>
                </value>
                <value>
                    <fullName>AP-GCHINA</fullName>
                </value>
                <value>
                    <fullName>AP-INDIA</fullName>
                </value>
                <value>
                    <fullName>AP-JAPAN</fullName>
                </value>
                <value>
                    <fullName>AP-KOREA</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>EMEA-CE-Czech Republic</fullName>
                </value>
                <value>
                    <fullName>EMEA-CE-Serbia</fullName>
                </value>
                <value>
                    <fullName>EMEA-CE-Slovakia</fullName>
                </value>
                <value>
                    <fullName>EMEA-ECE/MEA</fullName>
                </value>
                <value>
                    <fullName>EMEA-ECE/MEA-CE-Hungary</fullName>
                </value>
                <value>
                    <fullName>EMEA-ECE/MEA-CE-Poland</fullName>
                </value>
                <value>
                    <fullName>EMEA-EE-Russian Federation</fullName>
                </value>
                <value>
                    <fullName>EMEA-EE-Ukraine</fullName>
                </value>
                <value>
                    <fullName>EMEA-SSA-South Africa</fullName>
                </value>
                <value>
                    <fullName>EMEA-TMENA</fullName>
                </value>
                <value>
                    <fullName>EMEA-TMENA-Bulgaria</fullName>
                </value>
                <value>
                    <fullName>EMEA-TMENA-Romania</fullName>
                </value>
                <value>
                    <fullName>EMEA-WE</fullName>
                </value>
                <value>
                    <fullName>EMEA-WE-Belgium</fullName>
                </value>
                <value>
                    <fullName>EMEA-WE-France</fullName>
                </value>
                <value>
                    <fullName>EMEA-WE-Germany</fullName>
                </value>
                <value>
                    <fullName>EMEA-WE-Italy</fullName>
                </value>
                <value>
                    <fullName>EMEA-WE-Luxembourg</fullName>
                </value>
                <value>
                    <fullName>EMEA-WE-Netherlands</fullName>
                </value>
                <value>
                    <fullName>EMEA-WE-Nordic</fullName>
                </value>
                <value>
                    <fullName>EMEA-WE-Portugal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsPublic__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>TRUE if this Campaign can be publicly displayed externally</inlineHelpText>
        <label>IsPublic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key_Learnings__c</fullName>
        <inlineHelpText>Key Learnings from this &quot;In Progress&quot; or &quot;Completed&quot; Campaign. To store more detailed result, store an excel or Word document attachment to this campaign</inlineHelpText>
        <label>Key Learnings</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Legacy_Converted_Leads_in_Campaign__c</fullName>
        <label>Legacy Converted Leads in Campaign</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated.  Its is case sensitive and unique</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Letterhead__c</fullName>
        <label>Letterhead</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DuPont</fullName>
                    <default>true</default>
                    <label>DuPont</label>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>List_Type__c</fullName>
        <inlineHelpText>Master: For Opted-In
Campaign: For a specific Campaign
Test Group: For a test group
Segment: For a segment of Contacts to be used for reporting purposes only</inlineHelpText>
        <label>List Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Campaign</fullName>
                </value>
                <value>
                    <fullName>Campaign Test</fullName>
                </value>
                <value>
                    <fullName>Grouping</fullName>
                </value>
                <value>
                    <fullName>Master</fullName>
                </value>
                <value>
                    <fullName>Subscriber</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Main_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Main Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Marketing_Project__c</fullName>
        <description>Name of the Marketing Project this campaigns belong to</description>
        <inlineHelpText>This field will soon be eliminated, use the Parent Campaign or Related Initiative field instead</inlineHelpText>
        <label>Marketing Project</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NextStepUserRole__c</fullName>
        <description>The Role the Next Step User Plays</description>
        <inlineHelpText>The Role the Next Step User Plays</inlineHelpText>
        <label>Next  Step User Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Follow-Up Responder</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NextStepUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CLS: Followup Responder The individual within DuPont who will follow-up if the survey respondent requests follow-up</description>
        <inlineHelpText>CLS Followup Responder - The individual within DuPont who will follow-up if the survey respondent requests follow-up</inlineHelpText>
        <label>Next Step User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Offerings_SiteObject__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>lookup to SiteObject,  used for language translation of the offerings</description>
        <inlineHelpText>lookup to SiteObject,   used for language translation of the offerings</inlineHelpText>
        <label>Products/Offerings Description</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 OR 2) AND 3</booleanFilter>
            <filterItems>
                <field>$Source.Owning_Business__c</field>
                <operation>equals</operation>
                <valueField>SiteObject__c.Owning_Business__c</valueField>
            </filterItems>
            <filterItems>
                <field>SiteObject__c.Owning_Business__c</field>
                <operation>equals</operation>
                <value>Corporate</value>
            </filterItems>
            <filterItems>
                <field>SiteObject__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Translation</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SiteObject__c</referenceTo>
        <relationshipLabel>Campaigns (Offerings)</relationshipLabel>
        <relationshipName>CampaignOfferings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Origin_Tracking_Code__c</fullName>
        <description>A Reference code associated with the Campaign, such as Omniture Tracking Code</description>
        <inlineHelpText>A Reference code associated with the Campaign, such as Omniture Tracking Code</inlineHelpText>
        <label>Origin Tracking Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Owning_Business__c</fullName>
        <description>CLS: Owning_Business filter for offering products SiteObject lookup</description>
        <inlineHelpText>For Custom Loyalty project only, use Owning Org for all projects</inlineHelpText>
        <label>Owning_Business</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Building Innovations</fullName>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>DuPont Protection Technologies</fullName>
                </value>
                <value>
                    <fullName>Packaging &amp; Industrial Polymers</fullName>
                </value>
                <value>
                    <fullName>Solae</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Owning_Org__c</fullName>
        <label>Owning Org</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>BI-Env</fullName>
                </value>
                <value>
                    <fullName>BI-Landscape Systems</fullName>
                </value>
                <value>
                    <fullName>BI-Surf</fullName>
                </value>
                <value>
                    <fullName>CORP</fullName>
                </value>
                <value>
                    <fullName>CORP-Core</fullName>
                </value>
                <value>
                    <fullName>CORP-Corporate Plans</fullName>
                </value>
                <value>
                    <fullName>CORS-Government Affairs</fullName>
                </value>
                <value>
                    <fullName>CORS-Public Affairs</fullName>
                </value>
                <value>
                    <fullName>DPT-A&amp;HF</fullName>
                </value>
                <value>
                    <fullName>DPT-Agriculture</fullName>
                </value>
                <value>
                    <fullName>DPT-Air and Filtration</fullName>
                </value>
                <value>
                    <fullName>DPT-Aramids</fullName>
                </value>
                <value>
                    <fullName>DPT-ASPS</fullName>
                </value>
                <value>
                    <fullName>DPT-Automotive</fullName>
                </value>
                <value>
                    <fullName>DPT-Chemical Industrial</fullName>
                </value>
                <value>
                    <fullName>DPT-Cleanroom/Pharma</fullName>
                </value>
                <value>
                    <fullName>DPT-Covers</fullName>
                </value>
                <value>
                    <fullName>DPT-Critical Clean</fullName>
                </value>
                <value>
                    <fullName>DPT-DPP</fullName>
                </value>
                <value>
                    <fullName>DPT-Envelopes</fullName>
                </value>
                <value>
                    <fullName>DPT-ES</fullName>
                </value>
                <value>
                    <fullName>DPT-Graphics</fullName>
                </value>
                <value>
                    <fullName>DPT-Ind Pkg &amp; Protection</fullName>
                </value>
                <value>
                    <fullName>DPT-Industrial Thermal</fullName>
                </value>
                <value>
                    <fullName>DPT-IPP</fullName>
                </value>
                <value>
                    <fullName>DPT-Mechanical Industrial</fullName>
                </value>
                <value>
                    <fullName>DPT-Medical Fabrics</fullName>
                </value>
                <value>
                    <fullName>DPT-Medical Packaging</fullName>
                </value>
                <value>
                    <fullName>DPT-Medical Specialties</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <description>Customer Loyalty Survey : Deployment Qtr ( YYQ# )</description>
        <inlineHelpText>Customer Loyalty Survey : Deployment Qtr ( YYQ# )</inlineHelpText>
        <label>Phase</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planned_End_Date__c</fullName>
        <description>The planned ending date for this campaign.  &quot;End Date&quot; should be used for the actual end of the campaign</description>
        <inlineHelpText>The planned ending date for this campaign.  &quot;End Date&quot; should be used for the actual end of the campaign</inlineHelpText>
        <label>Planned End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PrimarySignContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of Business or Sales Leader.  This is a lookup to a Contact - if not already in SFDC as a Contact, add them, then link to this individual.</description>
        <inlineHelpText>Name of Business or Sales Leader.  This is a lookup to a Contact - if not already in SFDC as a Contact, add them, then link to this individual.</inlineHelpText>
        <label>Primary Signature</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Campaigns (Primary Signature)</relationshipLabel>
        <relationshipName>PrimarySignature</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PrimarySignTitle__c</fullName>
        <description>Job Title for Primary Signature</description>
        <inlineHelpText>Job Title for Primary Signature</inlineHelpText>
        <label>Primary Signature Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account Executive</fullName>
                </value>
                <value>
                    <fullName>Account Manager</fullName>
                </value>
                <value>
                    <fullName>Americas Business Director</fullName>
                </value>
                <value>
                    <fullName>Business Director</fullName>
                </value>
                <value>
                    <fullName>Business Leader</fullName>
                </value>
                <value>
                    <fullName>Business Manager</fullName>
                </value>
                <value>
                    <fullName>Business President</fullName>
                </value>
                <value>
                    <fullName>Country Business Manager</fullName>
                </value>
                <value>
                    <fullName>Country Leader</fullName>
                </value>
                <value>
                    <fullName>Country Manager</fullName>
                </value>
                <value>
                    <fullName>Country President</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>Executive Vice President</fullName>
                </value>
                <value>
                    <fullName>Global Business Director</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Marketing Director</fullName>
                </value>
                <value>
                    <fullName>Marketing Manager</fullName>
                </value>
                <value>
                    <fullName>North America Business Director</fullName>
                </value>
                <value>
                    <fullName>Regional Director</fullName>
                </value>
                <value>
                    <fullName>Regional Manager</fullName>
                </value>
                <value>
                    <fullName>Regional Managing Director</fullName>
                </value>
                <value>
                    <fullName>Regional President</fullName>
                </value>
                <value>
                    <fullName>Regional Product Manager</fullName>
                </value>
                <value>
                    <fullName>Regional Sales Director</fullName>
                </value>
                <value>
                    <fullName>Regional Sales Manager</fullName>
                </value>
                <value>
                    <fullName>Sales &amp; Marketing Manager</fullName>
                </value>
                <value>
                    <fullName>Sales Leader</fullName>
                </value>
                <value>
                    <fullName>Sales Manager</fullName>
                </value>
                <value>
                    <fullName>Senior Vice President</fullName>
                </value>
                <value>
                    <fullName>Sr Vice President and Chief Science &amp; Technology Officer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DPT-Aramids</fullName>
                </value>
                <value>
                    <fullName>DPT-IPP</fullName>
                </value>
                <value>
                    <fullName>DPT-NOW</fullName>
                </value>
                <value>
                    <fullName>DTT</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PublicDescription__c</fullName>
        <description>Short Description (1000 chars) used to describe this campaign to the public.   This is an extension of the Public Name field.</description>
        <inlineHelpText>Short Description visible to external audience</inlineHelpText>
        <label>Public Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PublicName__c</fullName>
        <description>Name of this campaign shown to public  (IE web sites, printed material, etc...)</description>
        <inlineHelpText>Name visible to external audience</inlineHelpText>
        <label>Public Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Initiative__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Main initiative this campaign contributes to</description>
        <label>Related Initiative</label>
        <referenceTo>Initiative__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SecondarySignContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Secondary Signature  involved with this Campaign (this is a lookup to the contact)</description>
        <inlineHelpText>Secondary Signature  involved with this Campaign (this is a lookup to the contact)</inlineHelpText>
        <label>Secondary Signature</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Campaigns (Secondary Signature)</relationshipLabel>
        <relationshipName>CampaignSecondarySignature</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SecondarySignTitle__c</fullName>
        <label>Secondary Signature Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account Executive</fullName>
                </value>
                <value>
                    <fullName>Account Manager</fullName>
                </value>
                <value>
                    <fullName>Business Development Manager</fullName>
                </value>
                <value>
                    <fullName>Business Leader</fullName>
                </value>
                <value>
                    <fullName>Business Manager</fullName>
                </value>
                <value>
                    <fullName>Country Business Manager</fullName>
                </value>
                <value>
                    <fullName>Country Leader</fullName>
                </value>
                <value>
                    <fullName>Country Manager</fullName>
                </value>
                <value>
                    <fullName>Country President</fullName>
                </value>
                <value>
                    <fullName>National Sales Manager</fullName>
                </value>
                <value>
                    <fullName>Regional Director</fullName>
                </value>
                <value>
                    <fullName>Regional Manager</fullName>
                </value>
                <value>
                    <fullName>Regional Managing Director</fullName>
                </value>
                <value>
                    <fullName>Regional President</fullName>
                </value>
                <value>
                    <fullName>Regional Product Manager</fullName>
                </value>
                <value>
                    <fullName>Regional Sales Director</fullName>
                </value>
                <value>
                    <fullName>Regional Sales Manager</fullName>
                </value>
                <value>
                    <fullName>Sales Manager</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Segment_Group__c</fullName>
        <description>Main Segment Group this Campaigns focuses on. For more details, use the Account-Segment of the contacts attached to this campaign</description>
        <inlineHelpText>Main Segment Group this Campaign focuses on. For more details, use the Account-Segment of the contacts attached to this campaign or the Target Group field</inlineHelpText>
        <label>Segment Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Apparel and Textile</fullName>
                </value>
                <value>
                    <fullName>Biotechnology</fullName>
                </value>
                <value>
                    <fullName>Chemical Industry</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Consumer Goods</fullName>
                </value>
                <value>
                    <fullName>Distribution</fullName>
                </value>
                <value>
                    <fullName>Electrical and Electronics</fullName>
                </value>
                <value>
                    <fullName>ES-O&amp;G</fullName>
                </value>
                <value>
                    <fullName>ES-Renewable</fullName>
                </value>
                <value>
                    <fullName>Food</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Health Care</fullName>
                </value>
                <value>
                    <fullName>Industrial and Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Military and Law Enforcement</fullName>
                </value>
                <value>
                    <fullName>Multiple</fullName>
                </value>
                <value>
                    <fullName>Packaging</fullName>
                </value>
                <value>
                    <fullName>Personal Protection</fullName>
                </value>
                <value>
                    <fullName>Plastics and Elastomers</fullName>
                </value>
                <value>
                    <fullName>Printing and Publishing</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>T-Air</fullName>
                </value>
                <value>
                    <fullName>T-Marine</fullName>
                </value>
                <value>
                    <fullName>T-Rail</fullName>
                </value>
                <value>
                    <fullName>T-Road</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Short_Term_Objectives__c</fullName>
        <label>Short Term Objectives</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Strategic_Intent__c</fullName>
        <label>Strategic Intent</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Target_Group__c</fullName>
        <description>Short description of the kind of the targeted contacts and companies this specific campaign is designed for.</description>
        <inlineHelpText>Short description of the kind of the targeted contacts and companies this specific campaign is designed for.</inlineHelpText>
        <label>Target Group</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <description>The main URL address of this Campaign or Channel</description>
        <label>Website</label>
        <type>Url</type>
    </fields>
</CustomObject>